--- a/css/main.css
+++ b/css/main.css
@@ -156,6 +156,16 @@ section.categoria {
     box-shadow: var(--box-shadow)!important;
 }
 
+.btn-red {
+    border: none!important;
+    background-color: var(--color-red);
+    color: var(--color-white)!important;
+    border-radius: 20px;
+    padding: 15px 25px;
+    font-size: 20px;
+    box-shadow: var(--box-shadow);
+}
+
 .btn-sm {
    padding: 8px 13px;
    border-radius: 15px;
