--- a/painel/css/painel.css
+++ b/painel/css/painel.css
@@ -624,3 +624,12 @@ input:checked + .slider::before {
     margin-top: -45px;
     margin-right: 10px;
 }
+
+.horario {
+    height: 52px;
+}
+
+.horario .btn-red {
+    margin-top: 30px;
+}
+
