--- a/css/main.css
+++ b/css/main.css
@@ -576,6 +576,10 @@ textarea {
     color: var(--color-primary);
 }
 
+.color-green {
+    color: var(--color-green)!important;
+}
+
 .card-address {
     cursor: pointer;
     display: flex;
