--- a/painel/css/painel.css
+++ b/painel/css/painel.css
@@ -633,3 +633,13 @@ input:checked + .slider::before {
     margin-top: 30px;
 }
 
+/* Relatórios */
+.value-card {
+    font-size: 20px;
+    color: var(--color-black);
+}
+
+.card-table, .data-table {
+    font-size: 14px!important;
+}
+
